# az-ai-kickstarter

./: .gitignore  CHANGELOG.md  README.md  TIPS_AND_TRICKS.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
doc/: BEST_PRACTICES.md  DESIGN_PRINCIPLES.md  TIPS_AND_TRICKS.md
doc/decisions/: 0001-record-architecture-decisions.md  0002-provide-a-devcontainer-configuration.md  0003-use-uv-for-python-dependency-management.md  0004-use-azure-container-apps-for-hosting.md  0005-use-azure-container-registry-image-builds.md  README.md
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/modules/ai/: cognitiveservices.bicep
infra/modules/app/: container-apps.bicep  container-registry.bicep  identity.bicep
scripts/: aca_logs.sh  oauth2PermissionScopes.json  postprovision.ps1  postprovision.sh  predown.ps1  predown.sh  preprovision.ps1  preprovision.sh
src/backend/: Dockerfile  README.md  app.py  curl_call.sh  docker-entrypoint.sh  orchestrator.py  pyproject.toml  requirements.txt  trigger_api_cli.sh  util.py
src/backend/agents/: critic.yaml  planner.yaml  writer.yaml
src/backend/patterns/: debate.py  planner_executor.py  reasoner.py
src/backend/plugins/weather/: weather.py
src/backend/utils/: util.py
src/frontend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
src/hello-ai-world-core/: pyproject.toml
src/hello-ai-world-core/src/hello_ai_world_core/: __init__.py
src/hello-ai-world-core/tests/: test_hello.py
