[project]
name = "hello_ai_world"
version = "0.1.0"
description = "AI Application chassis - best AI app practices optimized for Azure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv >=1.0.1,<1.2.0",
    "ipykernel >=6.29.5,<7.0.0",
    "ipywidgets >=8.1.5,<9.0.0",
]
