[project]
name = "hello_ai_world"
version = "0.1.0"
description = "AI Application chassis - best AI app practices optimized for Azure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel >=6.29.5,<7.0.0",
    "ipywidgets >=8.1.5,<9.0.0",
    "python-dotenv >=1.0.1,<1.2.0",
]

[tool.uv.workspace]
members = ["src/backend", "src/frontend"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["quartapp"]

[tool.black]
target-version =  ["py311"]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra --cov"
pythonpath = ["src"]

[tool.coverage.report]
show_missing = true




